--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-text-mask": "^5.5.0",
+    "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.9",
